<resources>
    <string name="app_name">pdumaresq_B52_A01</string>
    <string name="action_settings">Settings</string>
    <string name="str_fv">Future Value:</string>
    <string name="str_pv">Present Value:</string>
    <string name="str_ir">Interest Rate:</string>
    <string name="str_ti">Time Invested:</string>
    <string name="str_cf">Frequency:</string>
    <string name="str_calc">Calculate</string>
    <string name="title_activity_calculate_present">CalculatePresent</string>
    <string name="title_activity_calculate_future">CalculateFuture</string>
    <string name="future_title">Future Value</string>
    <string name="future_year">Year:</string>
    <string name="future_interest">Interest:</string>
    <string name="future_total">Total: </string>
    <string name="present_title">Present Value</string>

    <string-array name="frequency">
        <item value="12">Monthly</item>
        <item value="4" >Quarterly</item>
        <item value="2" >Semi-annually</item>
        <item value="1" >Annually</item>
    </string-array>
</resources>
